module8-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: httpserver
  name: httpserver
spec:
  type: ClusterIP
  ports:
    - port: 60
      protocol: TCP
      targetPort: 80
  selector:
    app: httpserver
